# python-project-51

./: .gitignore  Makefile  README.md  coverage.xml  page-loader-hexlet-repl-co.html  pyproject.toml  ru-hexlet-io-courses.html
.github/workflows/: python-package.yml
page_loader/: __init__.py  assets.py  downloader.py  resources.py  urls.py  utils.py
page_loader/scripts/: page_loader.py
rbc/: rbc-ru-.html  rbc-ru.html
rbc/rbc-ru/: .html
tests/: test_page_loader.py
tests/fixtures/expected/: chicken.html  result.html  source.html  sourse.html
var\tmp/: ru-hexlet-io-courses.html
var\tmp/ru-hexlet-io-courses-files/: accounts-google-com-gsi-client.html  ru-hexlet-io-courses.html  ru-hexlet-io-lessons.rss
